# repository_generator

./: README.md  requirements.txt  setup.cfg  setup.py
docs/: .buildinfo  genindex.html  index.html  kabbes_repository_generator.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/kabbes_repository_generator/: Client.html  RepositoryGenerator.html
docs/_sources/: index.rst.txt  kabbes_repository_generator.rst.txt  modules.rst.txt
src/repository_generator/: BaseRepository.py  CONFIG.json  Client.py  Repository.py  RepositoryParent.py  __init__.py  __main__.py  repository_generator.py
src/repository_generator/Template/: setup.cfg
src/repository_generator/Templates/: jameskabbes.py
src/repository_generator/Templates/jameskabbes/Template/: README.md
