[metadata]
name = {pypi_name}
version = {version}
author = {author}
author_email = {author_email}
description = {description}
long_description = file: README.md
long_description_content_type = text/markdown
url = {home_url}
project_urls =
    GitHub = {github_url}
    Documentation = {pages_url}
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src